--- a/movingBall.css
+++ b/movingBall.css
@@ -32,15 +32,11 @@ body {
     border: 4px solid red;
 }
 
-#buttons li
+button
 {
     height: 2.5em;
-    width: 32%;
-    display: inline;
-    list-style-type: none;
+    width: 30%;
     text-align: center;
-    padding:2em;
-    font-size: 2em;
 }
 
 #surface
